# SRCMS

./: README.md
project/: CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  test_env.py  tsconfig.json
project/.github/: pull_request_template.md
project/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
project/backend/: db.py  pyproject.toml
project/backend/SRCMS/: apps.py  ml_model.py  ml_urls.py  ml_views.py  models.py
project/backend/SRCMS/management/commands/: load_excel.py  load_queries.py
project/backend/SRCMS/migrations/: 0001_initial.py  0002_alter_complaint_passenger_id.py  0003_remove_complaint_created_at.py  0004_queryresponse.py  0005_rename_expected_output_queryresponse_suggested_response_and_more.py  0006_rename_sub_category_queryresponse_subcategory.py  0007_alter_queryresponse_external_id.py
project/backend/backend/: settings.py  urls.py
project/docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  FILE_STRUCTURE.md
project/my‑vite‑app/: package.json
project/src/: App.tsx
project/src/components/: Header.tsx
project/src/pages/: ComplaintForm.tsx  Dashboard.tsx  HomePage.tsx  TrackComplaint.tsx
